# autoSymTB

./: .gitignore  README.md  TODO-list.md  autoTB_condaEnv.yaml  autotb_condaenv_2023.yaml  changelog.md  notes.md  setup.cfg  setup.py
SALCs/: InvariantSpace.py  atomic_orbital.py  character_table.py  decompose.py  gbf.py  generate.py  group_data.py  group_subgroup.py  plot_mo.py  relationship.scap  spg.py  symmetry.py  test_D3h.py
SF6/: gbf.py  generate.py  plot.py  plot_SF6_mo.py  plot_mo.py  read_proj.py  symmetrize.py
automaticTB/: MOInteraction.py  __init__.py  atomic_orbitals.py  config.py  interaction.py  linear_combination.py  mathLA.py  orbitals.py  parameters.py  printing.py  requirements.txt  rotation.py  run.py  utilities.py
coordination/: ICSD_CollCode161491.cif  fit_vector.py  fullyconnected_fit.py  get_data.py  make_rotated.py  network.py  spherical_filter.py
docs/: 3dnn.tex  Makefile  ReferenceForReview.bib  ReviewRotationEquivariance.tex  conceptMap_MOs.scap  ref_AutomaticTB.bib  symmetryMOs.tex
examples/: AH3_example.ipynb  Si_sp3.ipynb  Si_sp3s.ipynb  perovskite_sp3.ipynb  single_band_overlap.ipynb
resources/: PbTe_ICSD38295.cif  Si_ICSD51688.cif  fm3qmFA.ps  perovskite.cif
tests/: compare_values.py  pytest.ini  run_pbte.py  run_perovskite.py  run_si_2nn.py  run_si_nn.py  test_bz_unfolding.py  test_import.py  test_import_structure.py  test_linear_equation.py  test_pbte.py  test_perovskite.py  test_projdos.py  test_pymatgen_sym.py  test_rotation.py  test_si_2nn.py  test_si_2nn.py.lprof  test_si_nn.py  test_transport.py  utilities.py
(+487 files in other folders)
