[metadata]
name = automaticTB
version = 0.1
description = automatically construct tight-binding methods based on crystal symmetry
author = wenhao Zhang
author_email = wenhao997@yahoo.com

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    ase>=3.22.1
    matplotlib
    numpy
    pymatgen>=2022.2.10
    requests
    scipy
    spglib>=1.16.3
    torch>=1.10.2
    torch_geometric>=2.0.3
    e3nn
    setuptools

[options.packages.find]
where = src